fixed performance home page banner on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,6 @@ a:focus {
   .seed-container {
     padding: 0px;
     width: 100%;
-    min-height: 630px;
   }
 }
 
